<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_start" android:title="@string/action_start"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_stop" android:title="@string/action_stop"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_network" android:title="@string/action_network"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_histo" android:title="@string/action_histo"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_quit" android:title="@string/action_quit"
        android:orderInCategory="100" app:showAsAction="never" />
</menu>
